# ProgettoKnnArchitetture

./: .gitignore  README.md  progetto_knn.cbp  report_completo.html  report_completo.txt  setup.py
_verify/: audit_workflow.js  reference_knn.py  test_installed.py  test_package.py
doc/: Presentazione_Progetto_KNN.pptx  Presentazione_Progetto_KNN_Local.pptx  Relazione.aux  Relazione.tex
doc/file_relazione/chapters/: capitolo1.tex  capitolo2.tex  capitolo3.tex  capitolo4.tex  capitolo5.tex
docs/: ARCHITETTURA.md  GUIDA_UTILIZZO.md
examples/: esempio_knn.py
include/: common.h  compare.h  compare64.h  config.h  distance.h  index.h  matrix.h  quantization.h  query.h  query64.h
python/: README.md  knn_interface.py  pyproject.toml  setup.py
python/Gruppo_Ferrari_DeFusco_Cuconato.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: compare.c  compare64.c  config.c  distance.c  distance32ASSEMBLY.c  distance64ASSEMBLY.c  distance_avx2.S  distance_sse2.S  index.c  main.c  main32ASSEMBLY.c  main64.c  main64ASSEMBLY.c  mainReport.c  matrix.c  quantization.c  quantpivot32.c  quantpivot32_py.c  quantpivot64.c  quantpivot64_py.c  quantpivot64omp.c  quantpivot64omp_py.c  query.c  query64.c
