[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = 'Gruppo_Ferrari_DeFusco_Cuconato'
version = "1.0"
authors = [
    {name = "Ferrari, De Fusco, Cuconato"},
]
description = "Quantized Index for K-NN search"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = ["numpy"]
